# github-events

./: .env.ai-servis  .env.example  .env.template  .gitignore  AGENT_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  ASSIGNMENT_COMPLIANCE.md  CHANGELOG.md  COMMIT_MONITORING_SUMMARY.md  DOCKER_PUBLISH_SUMMARY.md  DYNAMODB_IMPLEMENTATION_SUMMARY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUCCESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPORTED_FEATURES_SUMMARY.md  IMPROVEMENTS_AND_REFACTORINGS.md  MCP_TEST_RESULTS.md  OPENSSL_REFACTOR_INTEGRATION_SUMMARY.md  PR_SUMMARY.md  QUICK_START.md  README(1).md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_MONITORING_SETUP.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS_SUMMARY.md  VERIFICATION_REPORT.md  ai_servis_monitoring_report_20250929_212630.json  api.py  aws_resource_discovery.json  chart_script (1).py  check_conflicts.py  claude_desktop_config.json  collector.py  config.py  conftest.py  (+51 more)
.claude/agents/: multi-repo-orchestrator.md  repository-specialist.md
.cursor/: agent-mcp.usecase.mcp.json  development.usecase.mcp.json  docker-mcp.usecase.mcp.json  kubernetes.usecase.mcp.json  mcp.json  pip-package.usecase.mcp.json  production.usecase.mcp.json  rest-api.usecase.mcp.json  websocket.usecase.mcp.json
.github/workflows/: aws_deploy.yml  ci-cd.yml  ci-pages.yml  ci.yml  daily-metrics.yml  dashboard-pages.yml  documentation.yml  issue_request.yml  manual-update-db.yml  monitor-ecosystem.yml  pages.yml  publish.yml  release.yml  repository-comparison-monitoring.yml  stale-detection.yml  update-dashboard.yml  update-events-db.yml
.github/workflows/_backup_20250825T070226Z/: api-monitoring.yml  performance-testing.yml
cypress/e2e/: dashboard.cy.js  pages_deploy.cy.js
database/: events.db  schema.sql
docker/: Dockerfile  deploy.sh  docker-compose.yml
docs/: AGENT_ECOSYSTEM.md  API.md  ARCHITECTURE.md  ASSIGNMENT.md  COMMIT_MONITORING.md  DATABASE_ABSTRACTION.md  DEPLOYMENT.md  DOCKER_USAGE.md  DYNAMODB_SETUP.md  ECOSYSTEM_MONITORING.md  ENHANCED_MONITORING.md  MCP_CONFIGURATION_TEST_SUMMARY.md  OPENSSL_REFACTORING_MONITOR.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md  ai_servis_config.js  aws_configuration_guide.md  config.js  config.json  data.json  data_status.json  event_counts_10.json  event_counts_60.json  events_timeline.html  index.html  pr_metrics.html  repository_activity.html  repository_comparison.html  trending.json
examples/: api_examples.py  aws_openssl_integration.py  openssl_refactor_agents.js  sparesparrow_agent_config.js
github_events_monitor/: __init__.py  api.py  collector.py  config.py  mcp_server.py
github_events_monitor/tests/: collector.py
github_events_monitor/tests/integration/: __init__.py
mcp/: dashboard_export_server.py  server.py
scripts/: README.md  agent_dashboard.py  alert_manager.py  aws_github_events_discovery.py  build_pages.py  comprehensive_mcp_analysis.py  data_exporter.py  database_provider_example.py  discover_aws_resources.py  ecosystem_monitor.py  export_metrics.py  fixer.py  github_events_mcp_server.py  github_monitor.py  health_check.py  manual_db_update.py  mcp_server.py  merge_and_squash.py  pr_timing_analysis.py  repository_agent.py  run_mcp_analysis.ps1  setup_aws_github_events.py  setup_dynamodb.py  simple_pr_analysis.py  stale_detector.py
service/: data_exporter.py  github_monitor.py
site/: index.html
src/github_events_monitor/: __init__.py  __main__.py  agent_integration.py  api.py  api_endpoints.py  collector.py  config.py  dao.py  dashboard_html.py  database.py  enhanced_api.py  enhanced_event_collector.py  event.py  event_collector.py  mcp_server.py  openssl_refactor_monitor.py  pr_analyzer.py  repository_comparison_service.py  services.py
src/github_events_monitor/application/: github_events_command_service.py  github_events_query_service.py
src/github_events_monitor/domain/: events.py  protocols.py
src/github_events_monitor/infrastructure/: api_request_reader.py  api_response_writer.py  database_factory.py  database_interface.py  database_service.py  db_connection.py  dynamodb_adapter.py  events_repository.py  sqlite_adapter.py
src/github_events_monitor/interfaces/api/: endpoints.py  openssl_endpoints.py  repository_comparison_endpoints.py
src/github_events_monitor/tests/: collector.py  conftest.py
src/github_events_monitor/tests/integration/: test_integration.py
src/github_events_monitor/tests/unit/: test_api.py  test_collector.py
src/github_events_monitor/utils/: __init__.py  git_utils.py  github_utils.py  merge_utils.py  shell_utils.py
src/github_events_monitor/utils/tests/: __init__.py  test_git_utils.py  test_github_utils.py  test_merge_utils.py  test_shell_utils.py
tests/: conftest.py
tests/integration/: test_integration.py  test_mcp_configurations.py  test_mcp_configurations_simple.py
tests/unit/: test_api.py  test_api_endpoints.py  test_api_endpoints.py.disabled  test_collector.py  test_dao.py  test_dao.py.disabled
