[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "github-events-monitor"
version = "1.1.0"
description = "GitHub Events Monitor with FastAPI REST API and MCP server for real-time event tracking and visualization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sparesparrow", email = "sparesparrow@protonmail.ch" }]
license = { text = "MIT" }
keywords = ["github", "events", "fastapi", "mcp", "monitoring", "rest-api", "dashboard", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project]
# Runtime dependencies (app uses httpx; 'requests' is only for CI/demo scripts)
dependencies = [
  "httpx>=0.27.0",
  "aiosqlite>=0.19.0",
  "asyncio-pool>=0.6.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "mcp>=1.0.0",
  "matplotlib>=3.8.0",
  "Pillow>=10.2.0",
  "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/sparesparrow/github-events-clone"
Documentation = "https://github.com/sparesparrow/github-events-clone/tree/main/docs"
Repository = "https://github.com/sparesparrow/github-events-clone"
Issues = "https://github.com/sparesparrow/github-events-clone/issues"
Changelog = "https://github.com/sparesparrow/github-events-clone/releases"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
]
dev = [
  "black>=24.0.0",
  "isort>=5.13.0",
  "requests>=2.32.0",
]

[project.scripts]
github-events-monitor-api = "src.github_events_monitor.api:run"
github-events-monitor-mcp = "src.github_events_monitor.mcp_server:run"

[tool.hatch.build]
packages = ["src/github_events_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow tests",
  "api: API tests",
  "mcp: MCP tests",
]

 

[tool.uv.sources]
github-events-monitor = { workspace = true }

[dependency-groups]
dev = [
    "github-events-monitor",
]
